4177: combining methods and cleanup